# gpu-school

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
docker/: Dockerfile
gpu-school/: CMakeLists.txt
modules/00-intro/: CMakeLists.txt  README.md
modules/00-intro/src/: hello_gpu.cu
modules/01-architecture/: README.md
modules/01-architecture/src/: memory_access.cu
modules/02-basics/src/: vector_add.cu
modules/03-memory/: README.md
modules/03-memory/src/: matmul_naive.cu
modules/04-performance/: README.md
modules/04-performance/src/: matmul_tiled.cu
modules/05-streams/: CMakeLists.txt
modules/05-streams/src/: stream_overlap.cu
modules/06-advanced/src/: graph_vector_add.cu
modules/07-libraries/src/: gemm_cublas.cu
modules/08-profiling/: profile_matmul.sh
modules/09-opencl/: CMakeLists.txt  README.md
modules/09-opencl/src/: saxpy_cl.cpp
modules/cuda/: CMakeLists.txt
modules/cuda/00-intro/: README.md
modules/cuda/00-intro/src/: hello_gpu.cu
modules/cuda/01-architecture/: README.md
modules/cuda/01-architecture/src/: memory_access.cu
modules/cuda/01-memory-access/: CMakeLists.txt
modules/cuda/02-vector-add/: CMakeLists.txt  README.md
modules/cuda/02-vector-add/src/: vector_add.cu
modules/cuda/03-memory/: CMakeLists.txt
modules/cuda/03-memory/src/: matmul_naive.cu
modules/cuda/04-matmul-tiled/: CMakeLists.txt
modules/cuda/04-performance/: README.md
modules/cuda/04-performance/src/: matmul_tiled.cu
modules/cuda/05-streams/: README.md
modules/cuda/05-streams/src/: stream_overlap.cu
modules/cuda/06-advanced/: CMakeLists.txt  README.md
modules/cuda/06-graph-api/src/: graph_vector_add.cu
modules/cuda/07-cublas/: CMakeLists.txt
modules/cuda/07-libraries/: README.md
modules/cuda/07-libraries/src/: gemm_cublas.cu
modules/cuda/08-profiling/: CMakeLists.txt  README.md  profile_matmul.sh
modules/opencl/00-intro/: CMakeLists.txt  README.md
modules/opencl/00-intro/src/: hello_opencl.cpp
modules/opencl/02-basics/: README.md
modules/opencl/02-basics/src/: saxpy_cl.cpp
modules/opencl/02-saxpy/: CMakeLists.txt  README.md
modules/opencl/02-saxpy/src/: saxpy_cl.cpp
modules/opencl/03-matmul-naive/: CMakeLists.txt
modules/opencl/03-memory/: README.md
modules/opencl/03-memory/src/: matmul_naive_cl.cpp
modules/opencl/04-performance/: CMakeLists.txt  README.md
modules/opencl/04-performance/src/: matmul_tiled_cl.cpp
modules/opencl/05-streams/: CMakeLists.txt  README.md
modules/opencl/05-streams/src/: stream_overlap_cl.cpp
modules/opencl/06-advanced/: README.md
modules/opencl/06-reduction-atomic/: CMakeLists.txt  README.md
modules/opencl/06-reduction-atomic/src/: reduction_atomic_cl.cpp
modules/opencl/07-clblast/: CMakeLists.txt
modules/opencl/07-libraries/: README.md
modules/opencl/07-libraries/src/: gemm_clblast.cpp
